keep only useful stuff from bootstrap

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Sea for All</title>
 
     <!-- Bootstrap -->
-    <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet">
-    <link rel="stylesheet" href="custom.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/custom.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -48,7 +48,7 @@
                 </label>
                 <br>
                 <select name="ROLE" class="required" id="mce-ROLE">
-                  <option value=""></option>
+                  <option value="">Scegli un'opzione</option>
                   <option value="Vorrei condividere la mia barca">Vorrei condividere la mia barca</option>
                   <option value="Vorrei affittare una barca">Vorrei affittare una barca</option>
 
@@ -120,7 +120,7 @@
                         </label>
                         <br>
                         <select name="ROLE" class="required" id="mce-ROLE">
-                          <option value=""></option>
+                          <option value="">Scegli un'opzione</option>
                           <option value="Vorrei condividere la mia barca">Vorrei condividere la mia barca</option>
                           <option value="Vorrei affittare una barca">Vorrei affittare una barca</option>
 
@@ -147,6 +147,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-2.0.2.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
