--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6 owner text-center">
-            <img class="description-icon" src="img/Jetski.svg" alt="">
+            <img class="description-icon" src="img/capitano.png" alt="">
             <h2>Non stai usando la tua barca?</h2>
             <ul>
               <li>Abbatti i costi</li>
@@ -84,7 +84,7 @@
             </ul>
           </div>
           <div class="col-sm-6 consumer text-center">
-            <img class="description-icon" src="img/Boat.svg" alt="">
+            <img class="description-icon" src="img/marinaio.png" alt="">
             <h2>
               Vuoi fare un giro in barca?
             </h2>
