--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-theme.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="custom.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,7 +19,7 @@
     <![endif]-->
     
     <!-- font fichi da Google -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One|Raleway:400,300,700' rel='stylesheet' type='text/css'>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -31,17 +31,21 @@
     </script>
   </head>
   <body>
-    <div id="hero">      
+    <div id="hero">
+      <p class="text-center">
+        <img class="logo" src="img/logo.svg" alt="">
+      </p>
+      <div class="hero-background"></div>   
       <div class="container">
-        <h1>Condividi la barca con chi ama il mare e risparmia</h1>
-        <h3>Lasciaci la tua mail per restare aggiornato</h3>
+        <h1>riduci i costi della tua barca<br>condividila con chi ama il mare</h1>
+        <h3>Vuoi saperne di più? <strong>Lasciaci l'email</strong></h3>
 
         <!-- Begin MailChimp Signup Form -->
         <div id="mc_embed_signup">
           <form action="//seaforall.us10.list-manage.com/subscribe/post?u=69835b8c2d366cadb1d79be22&amp;id=b07377296f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
               <div class="mc-field-group">
-                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                <input placeholder="scrivi la tua email" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
               </div>
               <div class="mc-field-group">
                 <label for="mce-ROLE">Mi interessa perché
@@ -63,9 +67,7 @@
             </div>
           </form>
         </div>
-
         <!--End mc_embed_signup-->
-
 
       </div>
     </div>
@@ -106,7 +108,7 @@
 
               <h2 class="sei-pronto">Sei pronto?</h2>
               <p>Lasciaci l'email.<br>
-                Ti contatteremo appena si salpa. Arr!</p>
+                Ti contatteremo appena si salpa.</p>
 
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mc_embed_signup">
@@ -142,6 +144,14 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <br>
+      <p class="text-center">
+        Sea for All - Copyright 2015
+      </p>
+      <p class="text-center">hello@seaforall.com</p>
+    </footer>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
