--- a/index.html
+++ b/index.html
@@ -76,13 +76,12 @@
     <div class="pattern"></div>
       <div class="container">
         <div class="row">
+          <h1 class="text-center">Cos'è Sea for All</h1>
           <div class="col-sm-6 owner text-center">
             <img class="description-icon" src="img/capitano.png" alt="">
-            <h2>Non stai usando la tua barca?</h2>
+            <h2>Ami la tua barca ma costa troppo?</h2>
             <ul>
-              <li>Abbatti i costi</li>
-              <li>Fai vivere appieno la tua barca</li>
-              <li><em>Stai sereno</em>: pensiamo a tutto noi</li>
+              <li>Ti aiutiamo a trovare persone interessate ad usare la tua barca così da abbattere i costi</li>
             </ul>
           </div>
           <div class="col-sm-6 consumer text-center">
