--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="pattern"></div>
       <div class="container">
         <div class="row">
-          <h1 class="text-center">Cos'è Sea for All</h1>
+          <h1 class="text-center">Cosa fa Sea for All</h1>
           <div class="col-sm-6 owner text-center">
             <img class="description-icon" src="img/capitano.png" alt="">
             <h2>Ami la tua barca ma costa troppo?</h2>
