--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sea for All</title>
+    <title>SEA FOR ALL | Sharing is Saving</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -33,7 +33,7 @@
   <body>
     <div id="hero">
       <p class="text-center">
-        <img class="logo" src="img/logo.svg" alt="">
+        <img class="logo" src="img/sfa-logo-hor-white.png" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
       </p>
       <div class="hero-background"></div>   
       <div class="container">
@@ -76,12 +76,14 @@
     <div class="pattern"></div>
       <div class="container">
         <div class="row">
-          <h1 class="text-center">Cosa fa Sea for All</h1>
+          <h1 class="text-center">Cosa fa SEA FOR ALL</h1>
           <div class="col-sm-6 owner text-center">
             <img class="description-icon" src="img/capitano.png" alt="">
             <h2>Ami la tua barca ma costa troppo?</h2>
             <ul>
-              <li>Ti aiutiamo a trovare persone interessate ad usare la tua barca così da abbattere i costi</li>
+              <!-- <li>Ti aiutiamo a trovare persone interessate <br>ad usare la tua barca così da abbattere i costi</li> -->
+              <li>Ti troviamo persone interessate ad usarla</li>
+              <li>e ti aiutiamo ad abbattere i costi</li>
             </ul>
           </div>
           <div class="col-sm-6 consumer text-center">
@@ -90,9 +92,11 @@
               Vuoi fare un giro in barca?
             </h2>
             <ul>
-              <li>Trova una barca subito</li>
+<!--               <li>Trova una barca subito</li>
               <li>Divertiti e risparmia</li>
-              <li>Vivi il mare con gli amici</li>
+              <li>Vivi il mare con gli amici</li> -->
+              <li>Ti troviamo una barca subito</li>
+              <li>così vivi il mare e pensi a divertirti</li>
             </ul>
           </div>
         </div>
