--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <!-- font fichi da Google -->
     <link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One|Raleway:400,300,700' rel='stylesheet' type='text/css'>
 
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -32,6 +35,11 @@
   </head>
   <body>
     <div id="hero">
+      <div class="container">
+        <nav>
+          <img class="hidden-xs" src="img/sfa-logo-hor-white.png" height="30px" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
+        </nav>
+      </div>
       <p class="text-center">
         <img class="logo" src="img/sfa-logo-hor-white.png" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
       </p>
@@ -154,6 +162,14 @@
         Sea for All - Copyright 2015
       </p>
       <p class="text-center">hello@seaforall.com</p>
+      <p class="text-center icons">
+        <a href="https://twitter.com/seaforall">
+          <i class="fa fa-twitter"></i> 
+        </a>
+        <a href="https://www.facebook.com/pages/Sea-for-All/368816339967609">  
+          <i class="fa fa-facebook-square"></i>
+        </a>
+      </p>
     </footer>
 
 
