--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="hero">
       <div class="container">
         <nav>
-          <img class="hidden-xs" src="img/sfa-logo-hor-white.png" height="30px" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
+          <img class="hidden-xs" src="img/sfa-logo-hor-white-navbar.png" height="30px" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
         </nav>
       </div>
       <p class="text-center">
@@ -86,7 +86,9 @@
         <div class="row">
           <h1 class="text-center">Cosa fa SEA FOR ALL</h1>
           <div class="col-sm-6 owner text-center">
-            <img class="description-icon" src="img/capitano.png" alt="">
+            <div class="description-icon">
+              <img src="img/capitano.png" alt="">
+            </div>
             <h2>Ami la tua barca ma costa troppo?</h2>
             <ul>
               <!-- <li>Ti aiutiamo a trovare persone interessate <br>ad usare la tua barca così da abbattere i costi</li> -->
@@ -95,7 +97,9 @@
             </ul>
           </div>
           <div class="col-sm-6 consumer text-center">
-            <img class="description-icon" src="img/marinaio.png" alt="">
+            <div class="description-icon">
+              <img src="img/marinaio.png" alt="">
+            </div>
             <h2>
               Vuoi fare un giro in barca?
             </h2>
