modifiche al copy

--- a/index.html
+++ b/index.html
@@ -37,15 +37,16 @@
     <div id="hero">
       <div class="container">
         <nav>
-          <img class="hidden-xs" src="img/sfa-logo-hor-white-navbar.png" height="30px" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
+          <img class="hidden-xs" src="img/sfa-logo-hor-white.png" height="30px" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
         </nav>
       </div>
       <p class="text-center">
-        <img class="logo" src="img/sfa-logo-hor-white.png" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
+        <img class="logo" src="img/sfa-logo-hor-white-navbar.png" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
       </p>
-      <div class="hero-background"></div>   
+      <div class="hero-background"></div>
       <div class="container">
-        <h1>riduci i costi della tua barca<br>condividila con chi ama il mare</h1>
+        <h1>Condividi la tua barca con chi ama il mare</h1>
+        <p>&nbsp;</p>
         <h3>Vuoi saperne di più? <strong>Lasciaci l'email</strong></h3>
 
         <!-- Begin MailChimp Signup Form -->
@@ -56,13 +57,12 @@
                 <input placeholder="scrivi la tua email" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
               </div>
               <div class="mc-field-group">
-                <label for="mce-ROLE">Mi interessa perché
-                </label>
+                <label for="mce-ROLE">Mi interessa perché</label>
                 <br>
                 <select name="ROLE" class="required" id="mce-ROLE">
                   <option value="">Scegli un'opzione</option>
-                  <option value="Vorrei condividere la mia barca">Vorrei condividere la mia barca</option>
-                  <option value="Vorrei affittare una barca">Vorrei affittare una barca</option>
+                  <option value="Vorrei condividere la mia barca">Ho una barca da condividere</option>
+                  <option value="Vorrei affittare una barca">Cerco una barca in noleggio o locazione</option>
 
                 </select>
               </div>
@@ -76,7 +76,7 @@
           </form>
         </div>
         <!--End mc_embed_signup-->
-
+        <h2>#sharingissaving</h2>
       </div>
     </div>
 
@@ -107,8 +107,8 @@
 <!--               <li>Trova una barca subito</li>
               <li>Divertiti e risparmia</li>
               <li>Vivi il mare con gli amici</li> -->
-              <li>Ti troviamo una barca subito</li>
-              <li>così vivi il mare e pensi a divertirti</li>
+              <li>Ti aiutiamo a trovare la barca adatta alle tue esigenze</li>
+              <li>per divertirti ad un prezzo abbordabile</li>
             </ul>
           </div>
         </div>
@@ -138,8 +138,8 @@
                         <br>
                         <select name="ROLE" class="required" id="mce-ROLE">
                           <option value="">Scegli un'opzione</option>
-                          <option value="Vorrei condividere la mia barca">Vorrei condividere la mia barca</option>
-                          <option value="Vorrei affittare una barca">Vorrei affittare una barca</option>
+                          <option value="Vorrei condividere la mia barca">Ho una barca da condividere</option>
+                          <option value="Vorrei affittare una barca">Cerco una barca in noleggio o locazione</option>
 
                         </select>
                       </div>
