--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         <div class="row">
           <h1 class="text-center">Cosa fa SEA FOR ALL</h1>
           <div class="col-sm-6 owner text-center">
-            <div class="description-icon">
-              <img src="img/capitano.png" alt="">
+            <div class="description-icon-host">
+              <img src="img/sfa-logo-boat-only.png" alt="">
             </div>
-            <h2>Ami la tua barca ma costa troppo?</h2>
+            <h2>Vuoi guadagnare con la tua barca?</h2>
             <ul>
               <!-- <li>Ti aiutiamo a trovare persone interessate <br>ad usare la tua barca così da abbattere i costi</li> -->
               <li>Ti troviamo persone interessate ad usarla</li>
@@ -97,11 +97,11 @@
             </ul>
           </div>
           <div class="col-sm-6 consumer text-center">
-            <div class="description-icon">
-              <img src="img/marinaio.png" alt="">
+            <div class="description-icon-guest">
+              <img src="img/sfa-logo-boat-only.png" alt="">
             </div>
             <h2>
-              Vuoi fare un giro in barca?
+              Vuoi passare una giornata in barca?
             </h2>
             <ul>
 <!--               <li>Trova una barca subito</li>
