--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
   </head>
   <body>
     <div id="hero">
-      <div class="container">
-        <nav>
-          <img class="hidden-xs" src="img/sfa-logo-hor-white.png" height="30px" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
+      <div class="container-fluid">
+        <nav class="navbar">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#">
+                <img class="hidden-xs" src="img/sfa-logo-hor-white.png" height="30px" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
+              </a>
+            </div>
+          </div>
         </nav>
       </div>
       <p class="text-center">
@@ -86,27 +92,23 @@
         <div class="row">
           <h1 class="text-center">Cosa fa SEA FOR ALL</h1>
           <div class="col-sm-6 owner text-center">
-            <div class="description-icon-host">
-              <img src="img/sfa-logo-boat-only.png" alt="">
+            <div class="description-icon">
+              <img src="img/sfa-logo-circle-blue.png">
             </div>
             <h2>Vuoi guadagnare con la tua barca?</h2>
             <ul>
-              <!-- <li>Ti aiutiamo a trovare persone interessate <br>ad usare la tua barca così da abbattere i costi</li> -->
               <li>Ti troviamo persone interessate ad usarla</li>
               <li>e ti aiutiamo ad abbattere i costi</li>
             </ul>
           </div>
           <div class="col-sm-6 consumer text-center">
-            <div class="description-icon-guest">
-              <img src="img/sfa-logo-boat-only.png" alt="">
+            <div class="description-icon">
+              <img src="img/sfa-logo-circle-orange.png" alt="">
             </div>
             <h2>
               Vuoi passare una giornata in barca?
             </h2>
             <ul>
-<!--               <li>Trova una barca subito</li>
-              <li>Divertiti e risparmia</li>
-              <li>Vivi il mare con gli amici</li> -->
               <li>Ti aiutiamo a trovare la barca adatta alle tue esigenze</li>
               <li>per divertirti ad un prezzo abbordabile</li>
             </ul>
