--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <h2>Vuoi guadagnare con la tua barca?</h2>
             <ul>
-              <li>Ti troviamo persone interessate ad usarla</li>
+              <li>Troviamo persone interessate ad usarla</li>
               <li>e ti aiutiamo ad abbattere i costi</li>
             </ul>
           </div>
