--- a/en/index.html
+++ b/en/index.html
@@ -7,9 +7,9 @@
     <title>SEA FOR ALL | Sharing is Saving</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/bootstrap-theme.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap-theme.css" rel="stylesheet">
+    <link href="../css/custom.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -40,38 +40,38 @@
           <div class="container-fluid">
             <div class="navbar-header">
               <a class="navbar-brand" href="#">
-                <img class="hidden-xs" src="img/sfa-logo-hor-white.png" height="30px" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
+                <img class="hidden-xs" src="../img/sfa-logo-hor-white.png" height="30px" alt="SEA FOR ALL | Share your boat and save on storage and maintenance fees">
               </a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="en">In English</a></li>
+              <li><a href="..">In Italiano</a></li>
             </ul>
           </div>
         </nav>
       </div>
       <p class="text-center">
-        <img class="logo" src="img/sfa-logo-hor-white-navbar.png" alt="SEA FOR ALL | Condividi la tua barca e risparmia sui costi di gestione">
+        <img class="logo" src="../img/sfa-logo-hor-white-navbar.png" alt="SEA FOR ALL | Share your boat and save on storage and maintenance fees">
       </p>
       <div class="hero-background"></div>
       <div class="container">
-        <h1>Condividi la tua barca con chi ama il mare</h1>
+        <h1>Share your boat with those who love the sea</h1>
         <p>&nbsp;</p>
-        <h3>Vuoi saperne di più? <strong>Lasciaci l'email</strong></h3>
+        <h3><strong>Get in touch</strong> and learn more</h3>
 
         <!-- Begin MailChimp Signup Form -->
         <div id="mc_embed_signup">
           <form action="//seaforall.us10.list-manage.com/subscribe/post?u=69835b8c2d366cadb1d79be22&amp;id=b07377296f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
               <div class="mc-field-group">
-                <input placeholder="scrivi la tua email" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                <input placeholder="write your email here" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
               </div>
               <div class="mc-field-group">
-                <label for="mce-ROLE">Mi interessa perché</label>
+                <label for="mce-ROLE">I'm interested because</label>
                 <br>
                 <select name="ROLE" class="required" id="mce-ROLE">
-                  <option value="">Scegli un'opzione</option>
-                  <option value="Vorrei condividere la mia barca">Ho una barca da condividere</option>
-                  <option value="Vorrei affittare una barca">Cerco una barca in noleggio o locazione</option>
+                  <option value="">Please choose an option</option>
+                  <option value="Vorrei condividere la mia barca">I have a boat to share</option>
+                  <option value="Vorrei affittare una barca">I'm looking for a boat to rent</option>
 
                 </select>
               </div>
@@ -80,7 +80,7 @@
                 <div class="response" id="mce-success-response" style="display:none"></div>
               </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
               <div style="position: absolute; left: -5000px;"><input type="text" name="b_69835b8c2d366cadb1d79be22_b07377296f" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" value="Tienimi aggiornato" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-mailchimp"></div>
+              <div class="clear"><input type="submit" value="Keep me posted" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-mailchimp"></div>
             </div>
           </form>
         </div>
@@ -93,27 +93,27 @@
     <div class="pattern"></div>
       <div class="container">
         <div class="row">
-          <h1 class="text-center">Cosa fa SEA FOR ALL</h1>
+          <h1 class="text-center">What is SEA FOR ALL</h1>
           <div class="col-sm-6 owner text-center">
             <div class="description-icon">
-              <img src="img/sfa-logo-circle-blue.png">
+              <img src="../img/sfa-logo-circle-blue.png">
             </div>
-            <h2>Vuoi guadagnare con la tua barca?</h2>
+            <h2>Want to earn extra money with your boat?</h2>
             <ul>
-              <li>Troviamo persone interessate ad usarla</li>
-              <li>e ti aiutiamo ad abbattere i costi</li>
+              <li>We find people who would like to use it</li>
+              <li>and help you reduce your costs</li>
             </ul>
           </div>
           <div class="col-sm-6 consumer text-center">
             <div class="description-icon">
-              <img src="img/sfa-logo-circle-orange.png" alt="">
+              <img src="../img/sfa-logo-circle-orange.png" alt="">
             </div>
             <h2>
-              Vuoi passare una giornata in barca?
+              Want a boat to spend a day at sea?
             </h2>
             <ul>
-              <li>Ti aiutiamo a trovare la barca adatta alle tue esigenze</li>
-              <li>per divertirti ad un prezzo abbordabile</li>
+              <li>We help you find the perfect fit for you</li>
+              <li>a great boat at a reasonable price</li>
             </ul>
           </div>
         </div>
@@ -126,25 +126,25 @@
           <div class="col-sm-12">
             <div class="bordino-mail">
 
-              <h2 class="sei-pronto">Sei pronto?</h2>
-              <p>Lasciaci l'email.<br>
-                Ti contatteremo appena si salpa.</p>
+              <h2 class="sei-pronto">Ready?</h2>
+              <p>Leave us your email.<br>
+                We'll get in touch as we weigh anchor.</p>
 
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mc_embed_signup">
                   <form action="//seaforall.us10.list-manage.com/subscribe/post?u=69835b8c2d366cadb1d79be22&amp;id=b07377296f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
                       <div class="mc-field-group">
-                        <input placeholder="scrivi la tua email" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                        <input placeholder="write your email here" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
                       </div>
                       <div class="mc-field-group">
-                        <label for="mce-ROLE">Mi interessa perché
+                        <label for="mce-ROLE">I'm interested because
                         </label>
                         <br>
                         <select name="ROLE" class="required" id="mce-ROLE">
-                          <option value="">Scegli un'opzione</option>
-                          <option value="Vorrei condividere la mia barca">Ho una barca da condividere</option>
-                          <option value="Vorrei affittare una barca">Cerco una barca in noleggio o locazione</option>
+                          <option value="">Please choose an option</option>
+                          <option value="Vorrei condividere la mia barca">I have a boat to share</option>
+                          <option value="Vorrei affittare una barca">I'm looking for a boat to rent</option>
 
                         </select>
                       </div>
@@ -153,7 +153,7 @@
                         <div class="response" id="mce-success-response" style="display:none"></div>
                       </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                       <div style="position: absolute; left: -5000px;"><input type="text" name="b_69835b8c2d366cadb1d79be22_b07377296f" tabindex="-1" value=""></div>
-                      <div class="clear"><input type="submit" value="Tienimi aggiornato" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-mailchimp"></div>
+                      <div class="clear"><input type="submit" value="Keep me posted" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-mailchimp"></div>
                     </div>
                   </form>
                 </div>
@@ -183,8 +183,8 @@
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery-2.0.2.js"></script>
+    <script src="../js/jquery-2.0.2.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
   </body>
 </html>
