colore e hover sistemati 💁

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
               </a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="en">In English</a></li>
+              <li>
+                <a class="language" href="en">In English</a>
+              </li>
             </ul>
           </div>
         </nav>
