update del linguaggio availabile anche sull'idioma italico

--- a/en/index.html
+++ b/en/index.html
@@ -44,7 +44,7 @@
               </a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="..">In Italiano</a></li>
+              <li><a class="language" href="..">In Italiano</a></li>
             </ul>
           </div>
         </nav>
